# lingo-translate

./: .gitignore  Dockerfile  README.md  README1.md  language.yaml  main.py  pyproject.toml  requirements.txt  service.yaml  test_suggestion.py
.github/workflow/: main.yml
.github/workflows/: main.yml
lingo/: api_modules.py  manager.py  model_modules.py
lingo_suggestion/: README.md  context.py  engine.py  model_load.py  request_check.py  service.yaml  suggestion.py
lingo_suggestion/abbreviation/: abbreviation.txt  convert_abbrv.py  non_ai.py
lingo_suggestion/models/: GerMedBERT.py  PubMedBERT.py  gigaword_50.py  llama2_13b.py  llama2_7b.py  masking.py  ori.py
lingo_translate/: README.md  abstract.py  api_manager.py  api_modules.py  exception.py  manager.py  mapper.py  model_manager.py  model_modules.py
lingo_translate/api_modules/: __init__.py  deepl_module.py  google_module.py  papago_module.py
lingo_translate/model_modules/: __init__.py  huggingface_nllb_module.py  torch_transformer_module.py
lingo_translate/model_modules/torch/: model.py
