[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "lingo"
version = "0.0.1"
dependencies = ["langchain",
                "transformers", 
                "torch", 
                "torchvision", 
                "torchaudio",
                "ipywidgets",
                "evaluate",
                "matplotlib",
                "nltk",
                "rouge",
                "pylint",
                "deepl",
                "google-cloud-translate",
                "python-dotenv"]