[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "lingo"
version = "0.0.1"
dependencies = ["langchain",
                "langchain-community",
                "transformers", 
                "openai",
                "torch",
                "torchvision", 
                "torchaudio",
                "ipywidgets",
                "evaluate",
                "matplotlib",
                "nltk",
                "rouge",
                "pylint",
                "deepl",
                "google-cloud-translate",
                "python-dotenv",
                "fastapi",
                "scipy",
                "llama-cpp-python"]